<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/imageDescription"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/titleDescription"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:layout_alignParentBottom="true" />

                <Button
                    android:id="@+id/button"
                    android:text="@string/button"
                    android:layout_margin="2dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/buttonDescription"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/textViewDescription"
                android:text="@string/detailIngredients"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/ingredientsDescription"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/textViewDescription"
                android:text="@string/detailProcess"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="75dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/processDescription"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/fabDescription"
        android:src="@drawable/ic_heart_outline_white_18dp"
        ads:elevation="8dp"
        ads:fabSize="normal" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/adsDescription"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>