<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/cardDescription"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/cardImageDescription"
                android:gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/pasta" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_image"
                android:contentDescription="@string/cardTitleDescription"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_title"
                android:contentDescription="@string/cardSubTitleDescription"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>