<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/widget_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:contentDescription="@string/textViewDescription"
                android:paddingStart="8dp"
                android:text="@string/widgetTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <GridView
            android:id="@+id/widgetFavList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:columnWidth="100dp"
            android:gravity="center"
            android:contentDescription="@string/gridDescription"
            android:horizontalSpacing="8dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="8dp" />

    </LinearLayout>

</FrameLayout>